Fix extra margin-top in all application's header in mobile template

--- a/pixelegg/mobile/fw_mobile.less
+++ b/pixelegg/mobile/fw_mobile.less
@@ -370,6 +370,7 @@
 		#egw_fw_basecontainer {
 			#egw_fw_main {
 				margin-top:0px;
+				.egw_fw_ui_tab_content {margin-top: 0px;}
 			}
 
 			.egw_fw_ui_tabs_header .egw_fw_ui_tab_header img.egw_fw_ui_tab_icon {
